worked on the three main hikes pages, rover, northern and southern along with their css

--- a/northernHikes.html
+++ b/northernHikes.html
@@ -3,8 +3,58 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
+	<link href="hikes.css" type="text/css" rel="stylesheet"> <!--this is the stylesheet for the 3 hikes pages, rover, northern, southern-->
+	<link rel="stylesheet" href="https://use.typekit.net/wbv1obw.css">  <!--This is for the Adobe font used-->
 </head>
 
 <body>
+	
+	<div id="mainWrapper">
+		<header>
+		  <h1 id="tagline">Hikes that are out of this world!</h1>
+		  <img id="logo" src="assests/marsLogo2.png" alt="Mars Hiking Co. Logo">
+	  </header>
+	  
+	  <nav>
+		  <ul>
+			<li><a href="index.html">Home</a></li>
+		  </ul>
+	  </nav>
+		
+	 <section id="hike1">
+	    
+		  <div id= "hike1Pic">
+			<a href="wavyFormatins.html"><img src="assests/wavyFormation.jpg" alt="Picture of Wavy formations on Mars"></a>
+			<p>Image Credit: NASA/JPL-Caltech/University of Arizona</p>  
+		  </div>
+		<article id="hikes1">  
+			<a href="wavyFormations.html"><h2>Wavy Formations Hikes</h2></a>
+			<p>Come hike in the northern region of Mars.  While there you can get lost in the geology.  These formations will have you going through a maze of Martian sandstone deposits.</p>
+		</article>
+	  </section> <!--ending for hike1 canyon-->
+		
+		<section id="hike2">
+	    
+		  <div id= "hike2Pic">
+			<a href="unusualMound.html"><img src="assests/volcanicCone2.jpg" alt="View of the unusual mound of dirt."></a>
+			<p>Image Credit: NASA/JPL-Caltech/MSSS/JHU-APL/Brown Univ.</p>  
+		  </div>
+		<article id="hikes2">  
+			<a href="unusualMound.html"><h2>Unusual Mound Hikes</h2></a>
+			<p>Come take an easy hike up this unusual mound of dirt and experience the geolody of the northern hemisphere.  This hike has a small waystation and some good views of the surrounding terrain.  This would be a good hike to take to get acclimated to the Martian atmoshere.</p>
+		</article>
+	  </section> <!--ending for hike2 crater-->
+		
+	
+	
+	
+	
+	  <footer>
+		  <p>Background Image Credit: NASA/JPL/Malin Space Science Systems. <br> Mars Hiking Co. Providing information about hikes on Mars for yor Imagination</p>
+	  </footer>
+	
+	
+	</div> <!--this is the ending of mainWrapper-->
+	
 </body>
 </html>
