--- a/roverHikes.html
+++ b/roverHikes.html
@@ -3,8 +3,57 @@
 <head>
 <meta charset="utf-8">
 <title>Rover Hikes</title>
+	<link href="hikes.css" type="text/css" rel="stylesheet"> <!--this is the stylesheet for the 3 hikes pages, rover, northern, southern-->
+	<link rel="stylesheet" href="https://use.typekit.net/wbv1obw.css">  <!--This is for the Adobe font used-->
 </head>
 
 <body>
+	<div id="mainWrapper">
+		<header>
+		  <h1 id="tagline">Hikes that are out of this world!</h1>
+		  <img id="logo" src="assests/marsLogo2.png" alt="Mars Hiking Co. Logo">
+	  </header>
+	  
+	  <nav>
+		  <ul>
+			<li><a href="index.html">Home</a></li>
+		  </ul>
+	  </nav>
+		
+	 <section id="hike1">
+	    
+		  <div id= "hike1Pic">
+			<a href="galeCanyon.html"><img src="assests/murrayButtes2.jpg" alt="View of Murray Buttes in the Gale Canyon region"></a>
+			<p>Image Credit: NASA/JPL-Caltech/MSSS</p>  
+		  </div>
+		<article id="hikes1">  
+			<a href="galeCanyon.html"><h2>Gale Canyon Hikes</h2></a>
+			<p>This hike in Gale Canyon takes you to a wyastation among the rock formations of Murray Buttes area.  Take a few days to explore the various rock gardens and maybe even indulge in some rock climbing.</p>
+		</article>
+	  </section> <!--ending for hike1 canyon-->
+		
+		<section id="hike2">
+	    
+		  <div id= "hike2Pic">
+			<a href="victoriaCrater.html"><img src="assests/marathonValley4.jpg" alt="View across the plains of Marathon Valley"></a>
+			<p>Image Credit: NASA/JPL-Caltech/Cornell Univ./Arizona State Univ.</p>  
+		  </div>
+		<article id="hikes2">  
+			<a href="victoriaCrater.html"><h2>Victoria Crater Hikes</h2></a>
+			<p>Enjoy views of both Victoria Crater and the surrounding Marathon Valley.  This area is rich in history and settlments.  Take pictures near the steep Duck Canyon.  The surrounding Marathon Valley is perfect for exploration.  There are many named small settlements in the area.</p>
+		</article>
+	  </section> <!--ending for hike2 crater-->
+		
+	
+	
+	
+	
+	  <footer>
+		  <p>Background Image Credit: NASA/JPL/Malin Space Science Systems. <br> Mars Hiking Co. Providing information about hikes on Mars for your Imagination.</p>
+	  </footer>
+	
+	
+	</div> <!--this is the ending of mainWrapper-->
+	
 </body>
 </html>
