--- a/southernHikes.html
+++ b/southernHikes.html
@@ -3,8 +3,56 @@
 <head>
 <meta charset="utf-8">
 <title>southernHikes</title>
+	<link href="hikes.css" type="text/css" rel="stylesheet"> <!--this is the stylesheet for the 3 hikes pages, rover, northern, southern-->
+	<link rel="stylesheet" href="https://use.typekit.net/wbv1obw.css">  <!--This is for the Adobe font used-->
 </head>
 
 <body>
+	<div id="mainWrapper">
+		<header>
+		  <h1 id="tagline">Hikes that are out of this world!</h1>
+		  <img id="logo" src="assests/marsLogo2.png" alt="Mars Hiking Co. Logo">
+	  </header>
+	  
+	  <nav>
+		  <ul>
+			<li><a href="index.html">Home</a></li>
+		  </ul>
+	  </nav>
+		
+	 <section id="hike1">
+	    
+		  <div id= "hike1Pic">
+			<a href="southerHighlands.html"><img src="assests/southernHighlands2.jpg" alt="Picture of southern highland formations on Mars"></a>
+			<p>Image Credit: NASA/JPL-Caltech/University of Arizona</p>  
+		  </div>
+		<article id="hikes1">  
+			<a href="southernHighlands.html"><h2>Wavy Formations Hikes</h2></a>
+			<p>The Southern Highlands feature large ravines that could be evidence of water on Mars.  The black basalt sands are mesmerizing.  Hike this trail in the southern hemisphere to get a close up view of these black dunes.</p>
+		</article>
+	  </section> <!--ending for hike1 canyon-->
+		
+		<section id="hike2">
+	    
+		  <div id= "hike2Pic">
+			<a href="newtonsCrater.html"><img src="assests/newtonCraterWall.jpg" alt="View of the side wall of Newton's Crater."></a>
+			<p>Image Credit: NASA/JPL-Caltech/Univ. of Arizona</p>  
+		  </div>
+		<article id="hikes2">  
+			<a href="newtonsCrater.html"><h2>Unusual Mound Hikes</h2></a>
+			<p>Come to Newton's Crater to experience the soaring heights above the ravines along the crater's rim.  The views are definitely not for those afraid of heights.  Try the zipline between the cliffside across a 'small' fissure.</p>
+		</article>
+	  </section> <!--ending for hike2 crater-->
+		
+	
+	
+	
+	
+	  <footer>
+		  <p>Background Image Credit: NASA/JPL/Malin Space Science Systems. <br> Mars Hiking Co. Providing information about hikes on Mars for yor Imagination</p>
+	  </footer>
+	
+	
+	</div> <!--this is the ending of mainWrapper-->
 </body>
 </html>
