cleaned up assests folder.

--- a/southernHikes.html
+++ b/southernHikes.html
@@ -27,7 +27,7 @@
 			<p>Image Credit: NASA/JPL-Caltech/University of Arizona</p>  
 		  </div>
 		<article id="hikes1">  
-			<a href="southernHighlands.html"><h2>Wavy Formations Hikes</h2></a>
+			<a href="southernHighlands.html"><h2>Southern Highlands Hikes</h2></a>
 			<p>The Southern Highlands feature large ravines that could be evidence of water on Mars.  The black basalt sands are mesmerizing.  Hike this trail in the southern hemisphere to get a close up view of these black dunes.</p>
 		</article>
 	  </section> <!--ending for hike1 canyon-->
@@ -39,7 +39,7 @@
 			<p>Image Credit: NASA/JPL-Caltech/Univ. of Arizona</p>  
 		  </div>
 		<article id="hikes2">  
-			<a href="newtonsCrater.html"><h2>Unusual Mound Hikes</h2></a>
+			<a href="newtonsCrater.html"><h2>Newton's Crater Hikes</h2></a>
 			<p>Come to Newton's Crater to experience the soaring heights above the ravines along the crater's rim.  The views are definitely not for those afraid of heights.  Try the zipline between the cliffside across a 'small' fissure.</p>
 		</article>
 	  </section> <!--ending for hike2 crater-->
