--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	  <section id="rover">
 	    
 		  <div id="roverPic">
-			<a href="roverHikes.html"><img src="assests/westRimEndeavour.jpg" alt="Endenvour Crater View"></a>
+			<a href="roverHikes.html"><img src="assests/westRimEndeavour.jpg" alt="Endeavour Crater View"></a>
 			<p>Image Credit: NASA/JPL-Caltech/Univ. of Arizona</p>  
 		  </div>
 		<article id="roverHikes">  
