worked on the individual Hike pages

--- a/galeCanyon.html
+++ b/galeCanyon.html
@@ -24,7 +24,7 @@
 	  </nav>
 		 
 	  <div id="map">
-		  <img src="assests/galeCraterMap.jpg" alt="Map of Gale Crater Hike">
+		  <img src="assests/galeCanyonMap2.jpg" alt="Map of Gale Crater Hike">
 		  
 	  </div>
 		 
@@ -32,24 +32,29 @@
 		 <h2>Gale Canyon Hike Information</h2>
 		 
 		 <ul id="firstList">
+			 <li>Hike Rating: Difficult</li>
 			 <li>Distance: 7.62mile</li>
-			 <li>Elevation Gain/Loss: 108ft/-111ft</li>
+			 <li>Elevation Gain/Loss: 1905ft/-269ft</li>
 			 <li>Average Slope: 5.9%/-3.1%</li>
+			  <li>Max Slope: 14.2%/-9.7%</li>
+			 <li>Amenities: Small waystation</li>
 		 </ul>
+     </section> <!--ending mapInfo-->
 		 
-		 <ul id="secondList">
-			 <li>Hike Rating: Very Difficult</li>
-			 <li>Max Slope: 14.2%/-9.7%</li>
-		 </ul>
+		 <section id="elevation">
+			 <img src="assests/galeCanyonelevation.jpg" alt="Elevation profile for Gale Canyon">
+		 </section>	
 		 
-     </section> 
-		 
+		 <section id="copyText">
+			 <h2>Gale Canyon Hike</h2>
+			 <p>Start at the Cooperstown Trailhead.  Then go through Dingo Gap and the Kimberly.  Make your way through the transitions and Mesas.  Here you get a good view of the dark dunes.  Stop at waystation 6.  Waystation 6 is at a gateway to rock gardens and formations.  Plan a couple of days of rappellling and rock climbing among the formations.</p>
+		 </section>
 
 	
 	
 	
 	 <footer>
-		  <p>Background Image Credit: NASA/JPL/Malin Space Science Systems. <br> All hikes are fictional and are for entertainment and imagination purposes only.</p>
+		  <p>Image Credits: NASA and Google Maps. <br> Mars Hiking Co. Providing information about hikes on Mars for your Imagination.</p>
 	  </footer>
 		 
   </div> <!--this is the ending for mainWrapper-->	
