--- a/southernHighlands.html
+++ b/southernHighlands.html
@@ -2,9 +2,60 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Southern Highlands</title>
+	<link href="hikesPage.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://use.typekit.net/wbv1obw.css">  <!--This is for the Adobe font used-->
 </head>
 
 <body>
+	 <div id="mainWrapper"> <!--this is the div for the whole page-->
+    
+	  <header>
+		  <h1 id="tagline">Hikes that are out of this world!</h1>
+		  <img id="logo" src="assests/marsLogo2.png" alt="Mars Hiking Co. Logo">
+	  </header>
+	  
+	  <nav>
+		  <ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="roverHikes.html">Back to Rover Hikes</a></li>
+		  </ul>
+	  </nav>
+		 
+	  <div id="map">
+		  <img src="assests/SouthernHighlands2-3.jpg" alt="Map of Southern Highlands Hike">
+		  
+	  </div>
+		 
+	 <section id="mapInfo">
+		 <h2>Southern Highlands Hike Information</h2>
+		 
+		 <ul id="firstList">
+			 <li>Hike Rating: Very Difficult</li>
+			 <li>Distance: 2.6 miles</li>
+			 <li>Elevation Gain/Loss: 1338ft/-1400ft</li>
+			 <li>Average Slope: 23.2%/-17.0%</li>
+			  <li>Max Slope: 37.1%/-38.1%</li>
+			 <li>Amenities: Small waystation</li>
+		 </ul>
+     </section> <!--ending mapInfo-->
+		 
+		 <section id="elevation">
+			 <img src="assests/SouthernHighlandsElevation-3.jpg" alt="Elevation profile for the Southern Highlands">
+		 </section>	
+		 
+		 <section id="copyText">
+			 <h2>Southern Highlands Hike</h2>
+			 <p>This hike is rated very difficult due to the steep elevation changes.  Start a Waystation 32.  Take the path to the birdge doen into the flood channels.  Be sure to save energy for the climb out of the flood channel area.  This is the closest you will get to the flood channels.  Then make your way back to the waystation.</p>
+		 </section>
+
+	
+	
+	
+	 <footer>
+		  <p>Image Credits: NASA and Google Maps. <br> Mars Hiking Co. Providing information about hikes on Mars for your Imagination.</p>
+	  </footer>
+		 
+  </div> <!--this is the ending for mainWrapper-->	 
 </body>
 </html>
