--- a/victoriaCrater.html
+++ b/victoriaCrater.html
@@ -3,8 +3,59 @@
 <head>
 <meta charset="utf-8">
 <title>Victoria Crater</title>
+	<link href="hikesPage.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://use.typekit.net/wbv1obw.css">  <!--This is for the Adobe font used-->
 </head>
 
 <body>
+	<div id="mainWrapper"> <!--this is the div for the whole page-->
+    
+	  <header>
+		  <h1 id="tagline">Hikes that are out of this world!</h1>
+		  <img id="logo" src="assests/marsLogo2.png" alt="Mars Hiking Co. Logo">
+	  </header>
+	  
+	  <nav>
+		  <ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="roverHikes.html">Back to Rover Hikes</a></li>
+		  </ul>
+	  </nav>
+		 
+	  <div id="map">
+		  <img src="assests/VictoriaCraterMarathonValley-5.jpg" alt="Map of Victoria Crater Hike">
+		  
+	  </div>
+		 
+	 <section id="mapInfo">
+		 <h2>Victoria Crater Hike Information</h2>
+		 
+		 <ul id="firstList">
+			 <li>Hike Rating: Easy</li>
+			 <li>Distance: 1.0 miles</li>
+			 <li>Elevation Gain/Loss: 108ft/-111ft</li>
+			 <li>Average Slope: 3.8%/-4.4%</li>
+			  <li>Max Slope: 6.4%/-13.8%</li>
+			 <li>Amenities: Small waystation</li>
+		 </ul>
+     </section> <!--ending mapInfo-->
+		 
+		 <section id="elevation">
+			 <img src="assests/VictoriaCraterMarathonValleyElevation-2.jpg" alt="Elevation profile for Victoria Crater">
+		 </section>	
+		 
+		 <section id="copyText">
+			 <h2>Victoria Crater Hike</h2>
+			 <p>Start at waystation 6 in the plains.  Take and easy hike to the overlooks of Victoria Crater.  After a trip around Duck Bay, soak in the sights at the scenic overlook at Cape Verde.  Be sure to stop at Valley View to see the sights of Marathon Valley.  This is a good first hike to get acclimated to the Mars experience and test your gear.</p>
+		 </section>
+
+	
+	
+	
+	 <footer>
+		  <p>Image Credits: NASA and Google Maps. <br> Mars Hiking Co. Providing information about hikes on Mars for your Imagination.</p>
+	  </footer>
+		 
+  </div> <!--this is the ending for mainWrapper-->	
 </body>
 </html>
