--- a/unusualMound.html
+++ b/unusualMound.html
@@ -3,8 +3,59 @@
 <head>
 <meta charset="utf-8">
 <title>Unusual Mound of Dirt</title>
+	<link href="hikesPage.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://use.typekit.net/wbv1obw.css">  <!--This is for the Adobe font used-->
 </head>
 
 <body>
+	<div id="mainWrapper"> <!--this is the div for the whole page-->
+    
+	  <header>
+		  <h1 id="tagline">Hikes that are out of this world!</h1>
+		  <img id="logo" src="assests/marsLogo2.png" alt="Mars Hiking Co. Logo">
+	  </header>
+	  
+	  <nav>
+		  <ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="roverHikes.html">Back to Rover Hikes</a></li>
+		  </ul>
+	  </nav>
+		 
+	  <div id="map">
+		  <img src="assests/UnusualMoundNorth-4.jpg" alt="Map of Unusual Mound of Dirt Hike">
+		  
+	  </div>
+		 
+	 <section id="mapInfo">
+		 <h2>Unusual Mound Hike Information</h2>
+		 
+		 <ul id="firstList">
+			 <li>Hike Rating: Easy</li>
+			 <li>Distance: 1.51 miles</li>
+			 <li>Elevation Gain/Loss: 12.7ft/-12.5ft</li>
+			 <li>Average Slope: 0.3%/-0.3%</li>
+			  <li>Max Slope: 0.8%/-0.6%</li>
+			 <li>Amenities: Small waystation</li>
+		 </ul>
+     </section> <!--ending mapInfo-->
+		 
+		 <section id="elevation">
+			 <img src="assests/UnusualMoundHikeElevation-4.jpg" alt="Elevation profile for the Unusual Mound of Dirt.">
+		 </section>	
+		 
+		 <section id="copyText">
+			 <h2>Unusual Mound Hike</h2>
+			 <p>This hike takes you usp a mound of some unusual dirt.  The dirt's composition is still not fully understood.  Be sure to check out the ripple land formations to the north and the ice deposits to the east.  The area around the unusual mound provides a great place to view the rise of Mar's two moons, Phobos and Deimos.</p>
+		 </section>
+
+	
+	
+	
+	 <footer>
+		  <p>Image Credits: NASA and Google Maps. <br> Mars Hiking Co. Providing information about hikes on Mars for your Imagination.</p>
+	  </footer>
+		 
+  </div> <!--this is the ending for mainWrapper-->	
 </body>
 </html>
