--- a/wavyFormations.html
+++ b/wavyFormations.html
@@ -3,8 +3,59 @@
 <head>
 <meta charset="utf-8">
 <title>Wavy Formations</title>
+	<link href="hikesPage.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://use.typekit.net/wbv1obw.css">  <!--This is for the Adobe font used-->
 </head>
 
 <body>
+	<div id="mainWrapper"> <!--this is the div for the whole page-->
+    
+	  <header>
+		  <h1 id="tagline">Hikes that are out of this world!</h1>
+		  <img id="logo" src="assests/marsLogo2.png" alt="Mars Hiking Co. Logo">
+	  </header>
+	  
+	  <nav>
+		  <ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="roverHikes.html">Back to Rover Hikes</a></li>
+		  </ul>
+	  </nav>
+		 
+	  <div id="map">
+		  <img src="assests/WavyFormationHike4-1.jpg" alt="Map of the Wavy Formation Hike">
+		  
+	  </div>
+		 
+	 <section id="mapInfo">
+		 <h2>Wavy Formation Hike Information</h2>
+		 
+		 <ul id="firstList">
+			 <li>Hike Rating: Moderate</li>
+			 <li>Distance: 0.77 miles</li>
+			 <li>Elevation Gain/Loss: 103ft/-181ft</li>
+			 <li>Average Slope: 6.0%/-7.5%</li>
+			  <li>Max Slope: 16.2%/-17.4%</li>
+			 <li>Amenities: Campsite</li>
+		 </ul>
+     </section> <!--ending mapInfo-->
+		 
+		 <section id="elevation">
+			 <img src="assests/WavyFormationsElevationGoogleMars-1.jpg" alt="Elevation profile for the wavy formations hike.">
+		 </section>	
+		 
+		 <section id="copyText">
+			 <h2>Wavy Formation Hike</h2>
+			 <p>The Wavy Formations hike isn't long, but you need to properly prepare your gear.  There are fewer waystations or settlements around.  The geological formations are spectacular.  Start at the trailhead and weave your way through the maze.  Enjoy a rest in the flatlands before your assent to the scenic overlook.  Then make your way to the campsites.</p>
+		 </section>
+
+	
+	
+	
+	 <footer>
+		  <p>Image Credits: NASA and Google Maps. <br> Mars Hiking Co. Providing information about hikes on Mars for your Imagination.</p>
+	  </footer>
+		 
+  </div> <!--this is the ending for mainWrapper-->	
 </body>
 </html>
