worked on about us and contact us pages and css files

--- a/PreparationTips.html
+++ b/PreparationTips.html
@@ -3,8 +3,62 @@
 <head>
 <meta charset="utf-8">
 <title>Preparation and Tips</title>
+	<link href="otherPages.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/wbv1obw.css">  <!--This is for the Adobe font used-->  
 </head>
 
 <body>
+	<div id="mainWrapper"> <!--this is the div for the whole page-->
+    
+	  <header>
+		  <h1 id="tagline">Hikes that are out of this world!</h1>
+		  <img id="logo" src="assests/marsLogo2.png" alt="Mars Hiking Co. Logo">
+	  </header>
+	  
+	  <nav>
+		  <ul>
+			<li><a href="index.html">Home</a></li>
+		  </ul>
+	  </nav>
+		
+		<section id="copyText2">
+		  <h1>Preparation and Tips</h1>
+		  <p>Hiking on Mars will be unlike anyghing you have experienced before.  There are some things to consider when planning your hike. Good preparation will make your trip more enjoyable.<br><br></p>
+		<h3>Equipment to bring.</h3>	
+		<ul>
+			<li>Daypack for your gear.  Keep the weight low, no more than 20 pounds.</li>
+			<li>Good boots are important.  Happy feet make for a happy hiker.</li>
+			<li>Water is scarce.  Have a plan to carry one liter per person per day between fill stations.</li>
+			<li>GPS and map to navigate.  Make sure you know how to use these tools before you arrive.</li>
+			<li>Appropriate suit.  It will need to have good radiation shielding and pressure abilities.  Check the manufacture ratings to see if your suit is right for Mars.</li>
+		</ul>	
+			
+		<h3>Preparation Program</h3>
+			<ul>
+				<li>You will be a long way from Earth.  Make sure that you are able to handle emergency situations, should they arise, without outside support.  A wilderness survial class can prepare you for the unexpected.</li>
+				<li>Start an exercise program.  Hiking, running, and weights are good exercises.  Try to exercise at a high altitude, if possible, to get used to low oxygen levels.</li>
+				<li>Plan your group wisely.  Go with others of like abilities and interests.  The refill and rest stations have limited space.  You will likely be close to others in your group for extened periods of time.</li>
+			</ul>
+		
+			<h3>What to Expect</h3>
+			<ul>
+				<li>You will be tired at the end of the day.</li>
+				<li>Food will be ready to eat meals in easy to heat packaging.  It will provied you with the energy that you need for the journey.</li>
+				<li>There will be a few basic waystations along the way.  These waystations are low oxygen and low gravity with limited space.  Plan your trip with the equipment that you need to make it from waystation to waystation.  Make sure you have reservations set up with each station and stick to your schedule.</li>
+				<li>There will be a communication delay if you need assistance.</li>			
+			</ul>
+			
+			<p>Expect to be awed.  You will get to experience Mars up close and the scenery is out of this world.</p>
+		</section>
+		
+		<div id="art">
+			<img src="assests/compassRose.png" alt="An art picture of a compass">
+		</div>
+	
+	  <footer>
+		<p>Background Image Credit: NASA/JPL/Malin Space Science Systems. <br> Mars Hiking Co. Providing information about hikes on Mars for your Imagination.</p>
+	</footer>
+	</div> <!--this is the ending for mainWrapper-->
+	
 </body>
 </html>
