--- a/aboutUs.html
+++ b/aboutUs.html
@@ -3,8 +3,45 @@
 <head>
 <meta charset="utf-8">
 <title>About Us</title>
+	<link href="otherPages.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/wbv1obw.css">  <!--This is for the Adobe font used-->  
 </head>
 
 <body>
+	
+	 <div id="mainWrapper"> <!--this is the div for the whole page-->
+    
+	  <header>
+		  <h1 id="tagline">Hikes that are out of this world!</h1>
+		  <img id="logo" src="assests/marsLogo2.png" alt="Mars Hiking Co. Logo">
+	  </header>
+	  
+	  <nav>
+		  <ul>
+			<li><a href="index.html">Home</a></li>
+		  </ul>
+	  </nav>
+		
+	<section id="us">
+		
+	 <div id= "pic">
+		<img src="assests/humansOnMars2.jpg" alt="A NASA artist representation of what human life on Mars might look like.">
+		<p>Image Credit: NASA/JPL</p>  
+	 </div> 
+		 
+     <article id="copyText">
+		 <h1>About Us</h1>
+		 <p>The Mars Hiking Co. was born out of the imagination.  I am an outdoor enthusiast and enjoy hiking, backpacking, and adventure travel.  I am always looking for new and exciting places to experienc.  And then a thought occurred to me.  What would it be like to hike on a different planet?  What would it be like to hike on Mars?  Where would you go?  The Red Planet is on the radar for human travel in the not so distant future.<br><br>And so, the fictional Mars Hiking Co. was born.  This company compiles and provides information on some sights to see and trails to hike on Mars that excite the imagination.  They are interesting places to visit, if you ever were to find yourself on Mars.  All the informatin on hikes provided by the Mars Hiking Co. are for entertainment purposes only.</p>
+	 </article> 
+		
+	 </section>
+		 
+	<footer>
+		<p>Background Image Credit: NASA/JPL/Malin Space Science Systems. <br> Mars Hiking Co. Providing information about hikes on Mars for your Imagination.</p>
+	</footer>
+	
+	</div>   <!--this is the ending for mainWrapper-->	 
+	
+	
 </body>
 </html>
