worked on contact us page

--- a/ContactUs.html
+++ b/ContactUs.html
@@ -8,20 +8,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/wbv1obw.css">  <!--This is for the Adobe font used-->  
 	
 	<!--This is for the tooltip tool from JQuery-->
-	<style>
-  label {
-    display: inline-block; width: 5em;
-  }
-  fieldset div {
-    margin-bottom: 2em;
-  }
-  fieldset .help {
-    display: inline-block;
-  }
-  .ui-tooltip {
-    width: 210px;
-  }
-  </style>
+	
 	<script>
   $( function() {
     var tooltips = $( "[title]" ).tooltip({
@@ -62,7 +49,7 @@
 		
 	
 	<section id="contactInfo">
-		  <p>If you would like us to get back with you, please fill out the form below.  We will contact you soon.</p>
+		  <p>If you would like us to get back with you, please fill out the form below.  We will contact you soon.</p><br><br>
 		  <form>
 			  <fieldset>
 			   <div>	  
