fixed some links

--- a/northernHikes.html
+++ b/northernHikes.html
@@ -24,7 +24,7 @@
 	 <section id="hike1">
 	    
 		  <div id= "hike1Pic">
-			<a href="wavyFormatins.html"><img src="assests/wavyFormation.jpg" alt="Picture of Wavy formations on Mars"></a>
+			<a href="wavyFormations.html"><img src="assests/wavyFormation.jpg" alt="Picture of Wavy formations on Mars"></a>
 			<p>Image Credit: NASA/JPL-Caltech/University of Arizona</p>  
 		  </div>
 		<article id="hikes1">  
