--- a/southernHikes.html
+++ b/southernHikes.html
@@ -23,7 +23,7 @@
 	 <section id="hike1">
 	    
 		  <div id= "hike1Pic">
-			<a href="southerHighlands.html"><img src="assests/southernHighlands2.jpg" alt="Picture of southern highland formations on Mars"></a>
+			<a href="southernHighlands.html"><img src="assests/southernHighlands2.jpg" alt="Picture of southern highland formations on Mars"></a>
 			<p>Image Credit: NASA/JPL-Caltech/University of Arizona</p>  
 		  </div>
 		<article id="hikes1">  
