--- a/unusualMound.html
+++ b/unusualMound.html
@@ -18,7 +18,7 @@
 	  <nav>
 		  <ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="roverHikes.html">Back to Rover Hikes</a></li>
+			<li><a href="northernHikes.html">Back to Northern Hikes</a></li>
 		  </ul>
 	  </nav>
 		 
