--- a/PreparationTips.html
+++ b/PreparationTips.html
@@ -23,7 +23,7 @@
 		
 		<section id="copyText2">
 		  <h1>Preparation and Tips</h1>
-		  <p>Hiking on Mars will be unlike anyghing you have experienced before.  There are some things to consider when planning your hike. Good preparation will make your trip more enjoyable.<br><br></p>
+		  <p>Hiking on Mars will be unlike anything you have experienced before.  There are some things to consider when planning your hike. Good preparation will make your trip more enjoyable.<br><br></p>
 		<h3>Equipment to bring.</h3>	
 		<ul>
 			<li>Daypack for your gear.  Keep the weight low, no more than 20 pounds.</li>
