--- a/victoriaCrater.html
+++ b/victoriaCrater.html
@@ -46,7 +46,7 @@
 		 
 		 <section id="copyText">
 			 <h2>Victoria Crater Hike</h2>
-			 <p>Start at waystation 6 in the plains.  Take and easy hike to the overlooks of Victoria Crater.  After a trip around Duck Bay, soak in the sights at the scenic overlook at Cape Verde.  Be sure to stop at Valley View to see the sights of Marathon Valley.  This is a good first hike to get acclimated to the Mars experience and test your gear.</p>
+			 <p>Start at waystation 6 in the plains.  Take an easy hike to the overlooks of Victoria Crater.  After a trip around Duck Bay, soak in the sights at the scenic overlook at Cape Verde.  Be sure to stop at Valley View to see the sights of Marathon Valley.  This is a good first hike to get acclimated to the Mars experience and test your gear.</p>
 		 </section>
 
 	
