caption/ credit on About us page.

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -26,8 +26,10 @@
 		
 	 <div id= "pic">
 		<img src="assests/humansOnMars2.jpg" alt="A NASA artist representation of what human life on Mars might look like.">
-		<p>Image Credit: NASA/JPL</p>  
-	 </div> 
+	
+		<p>Image Credit: NASA/JPL <br><br>
+		This is a NASA artist representation of humans on Mars.</p>
+		</div>
 		 
      <article id="copyText">
 		 <h1>About Us</h1>
