--- a/aboutUs.html
+++ b/aboutUs.html
@@ -28,7 +28,7 @@
 		<img src="assests/humansOnMars2.jpg" alt="A NASA artist representation of what human life on Mars might look like.">
 	
 		<p>Image Credit: NASA/JPL <br><br>
-		This is a NASA artist representation of humans on Mars.</p>
+		This is a NASA artist's representation of humans on Mars.</p>
 		</div>
 		 
      <article id="copyText">
