--- a/galeCanyon.html
+++ b/galeCanyon.html
@@ -47,7 +47,7 @@
 		 
 		 <section id="copyText">
 			 <h2>Gale Canyon Hike</h2>
-			 <p>Start at the Cooperstown Trailhead.  Then go through Dingo Gap and the Kimberly.  Make your way through the transitions and Mesas.  Here you get a good view of the dark dunes.  Stop at waystation 6.  Waystation 6 is at a gateway to rock gardens and formations.  Plan a couple of days of rappellling and rock climbing among the formations.</p>
+			 <p>Start at the Cooperstown Trailhead.  Then go through Dingo Gap and the Kimberly.  Make your way through the transitions and Mesas.  Here you get a good view of the dark dunes.  Stop at waystation 11.  Waystation 11 is at a gateway to rock gardens and formations.  Plan a couple of days of rappelling and rock climbing among the formations.</p>
 		 </section>
 
 	
