--- a/roverHikes.html
+++ b/roverHikes.html
@@ -28,7 +28,7 @@
 		  </div>
 		<article id="hikes1">  
 			<a href="galeCanyon.html"><h2>Gale Canyon Hikes</h2></a>
-			<p>This hike in Gale Canyon takes you to a wyastation among the rock formations of Murray Buttes area.  Take a few days to explore the various rock gardens and maybe even indulge in some rock climbing.</p>
+			<p>This hike in Gale Canyon takes you to a waystation among the rock formations of the Murray Buttes area.  Take a few days to explore the various rock gardens and maybe even indulge in some rock climbing.</p>
 		</article>
 	  </section> <!--ending for hike1 canyon-->
 		
