worked on copy text

--- a/newtonsCrater.html
+++ b/newtonsCrater.html
@@ -31,7 +31,7 @@
 		 <h2>Newton's Crater Hike Information</h2>
 		 
 		 <ul id="firstList">
-			 <li>Hike Rating: Difficult</li>
+			 <li>Hike Rating: Moderate</li>
 			 <li>Distance: 2.74 miles</li>
 			 <li>Elevation Gain/Loss: 265ft/-135ft</li>
 			 <li>Average Slope: 3.5%/-2.0%</li>
@@ -46,7 +46,7 @@
 		 
 		 <section id="copyText">
 			 <h2>Gale Canyon Hike</h2>
-			 <p>This hike offers spectacular views into Newton's Crater.  Start at crater trailhead.  Make your way through the small dunes.  Take a rest at the views of crater area and if you are feeling adventourous, try the zipline.  Continue to Newton's Crater View.  Then make your way to waystation 119.</p>
+			 <p>This hike offers spectacular views into Newton's Crater.  Start at crater trailhead.  Make your way through the small dunes.  Take a rest at the views of crater area and if you are feeling adventourous, try the zipline.  Continue to Newton's Crater view.  Then make your way to waystation 119.</p>
 		 </section>
 
 	
