--- a/southernHighlands.html
+++ b/southernHighlands.html
@@ -46,7 +46,7 @@
 		 
 		 <section id="copyText">
 			 <h2>Southern Highlands Hike</h2>
-			 <p>This hike is rated very difficult due to the steep elevation changes.  Start a Waystation 32.  Take the path to the birdge doen into the flood channels.  Be sure to save energy for the climb out of the flood channel area.  This is the closest you will get to the flood channels.  Then make your way back to the waystation.</p>
+			 <p>This hike is rated very difficult due to the steep elevation changes.  Start a Waystation 32.  Take the path to the bridge down into the flood channels.  Be sure to save energy for the climb out of the flood channel area.  This is the closest you will get to the flood channels.  Then make your way back to the waystation.</p>
 		 </section>
 
 	
