--- a/unusualMound.html
+++ b/unusualMound.html
@@ -46,7 +46,7 @@
 		 
 		 <section id="copyText">
 			 <h2>Unusual Mound Hike</h2>
-			 <p>This hike takes you usp a mound of some unusual dirt.  The dirt's composition is still not fully understood.  Be sure to check out the ripple land formations to the north and the ice deposits to the east.  The area around the unusual mound provides a great place to view the rise of Mar's two moons, Phobos and Deimos.</p>
+			 <p>This hike takes you up a mound of some unusual dirt.  The dirt's composition is still not fully understood.  Be sure to check out the ripple land formations to the north and the ice deposits to the east.  The area around the unusual mound provides a great place to view the rise of Mar's two moons, Phobos and Deimos.</p>
 		 </section>
 
 	
