--- a/wavyFormations.html
+++ b/wavyFormations.html
@@ -46,7 +46,7 @@
 		 
 		 <section id="copyText">
 			 <h2>Wavy Formation Hike</h2>
-			 <p>The Wavy Formations hike isn't long, but you need to properly prepare your gear.  There are fewer waystations or settlements around.  The geological formations are spectacular.  Start at the trailhead and weave your way through the maze.  Enjoy a rest in the flatlands before your assent to the scenic overlook.  Then make your way to the campsites.</p>
+			 <p>The Wavy Formations hike isn't long, but you need to properly prepare your gear.  There are fewer waystations or settlements around.  The geological formations are spectacular.  Start at the trailhead and weave your way through the maze.  Enjoy a rest in the flatlands before your ascent to the scenic overlook.  Then make your way to the campsites.</p>
 		 </section>
 
 	
