worked on copy text

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -33,7 +33,7 @@
 		 
      <article id="copyText">
 		 <h1>About Us</h1>
-		 <p>The Mars Hiking Co. was born out of the imagination.  I am an outdoor enthusiast and enjoy hiking, backpacking, and adventure travel.  I am always looking for new and exciting places to experienc.  And then a thought occurred to me.  What would it be like to hike on a different planet?  What would it be like to hike on Mars?  Where would you go?  The Red Planet is on the radar for human travel in the not so distant future.<br><br>And so, the fictional Mars Hiking Co. was born.  This company compiles and provides information on some sights to see and trails to hike on Mars that excite the imagination.  They are interesting places to visit, if you ever were to find yourself on Mars.  All the informatin on hikes provided by the Mars Hiking Co. are for entertainment purposes only.</p>
+		 <p>The Mars Hiking Co. was born out of the imagination.  I am an outdoor enthusiast and enjoy hiking, backpacking, and adventure travel.  I am always looking for new and exciting places to experience.  And then a thought occurred to me.  What would it be like to hike on a different planet?  What would it be like to hike on Mars?  Where would you go?  The Red Planet is on the radar for human travel in the not so distant future.<br><br>And so, the fictional Mars Hiking Co. was born.  This company compiles and provides information on some sights to see and trails to hike on Mars that excite the imagination.  They are interesting places to visit, if you ever were to find yourself on Mars.  All the information on hikes provided by the Mars Hiking Co. are for entertainment purposes only.</p>
 	 </article> 
 		
 	 </section>
