--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		  </div>
 		<article id="roverHikes">  
 			<a href="roverHikes.html"><h2>Rover Hikes</h2></a>
-			<p>Take a hike in areas rich in Martian history.  Walk in the rovers path and see the areas where we had some of our first glimpses of what Mars is like.  This area is scattered with waystations and settlements.</p>
+			<p>Take a hike in areas rich in Martian history.  Walk in the rovers paths and see the areas where we had some of our first glimpses of what Mars is like.  This area is scattered with waystations and settlements.</p>
 		</article>
 	  </section> <!--ending for rover-->
 	  
