few type/text fixes

--- a/newtonsCrater.html
+++ b/newtonsCrater.html
@@ -45,7 +45,7 @@
 		 </section>	
 		 
 		 <section id="copyText">
-			 <h2>Gale Canyon Hike</h2>
+			 <h2>Newton's Crater Hike</h2>
 			 <p>This hike offers spectacular views into Newton's Crater.  Start at crater trailhead.  Make your way through the small dunes.  Take a rest at the views of crater area and if you are feeling adventourous, try the zipline.  Continue to Newton's Crater view.  Then make your way to waystation 119.</p>
 		 </section>
 
