--- a/roverHikes.html
+++ b/roverHikes.html
@@ -27,7 +27,7 @@
 			<p>Image Credit: NASA/JPL-Caltech/MSSS</p>  
 		  </div>
 		<article id="hikes1">  
-			<a href="galeCanyon.html"><h2>Gale Canyon Hikes</h2></a>
+			<a href="galeCanyon.html"><h2>Gale Canyon Hike</h2></a>
 			<p>This hike in Gale Canyon takes you to a waystation among the rock formations of the Murray Buttes area.  Take a few days to explore the various rock gardens and maybe even indulge in some rock climbing.</p>
 		</article>
 	  </section> <!--ending for hike1 canyon-->
@@ -39,7 +39,7 @@
 			<p>Image Credit: NASA/JPL-Caltech/Cornell Univ./Arizona State Univ.</p>  
 		  </div>
 		<article id="hikes2">  
-			<a href="victoriaCrater.html"><h2>Victoria Crater Hikes</h2></a>
+			<a href="victoriaCrater.html"><h2>Victoria Crater Hike</h2></a>
 			<p>Enjoy views of both Victoria Crater and the surrounding Marathon Valley.  This area is rich in history and settlments.  Take pictures near the steep Duck Canyon.  The surrounding Marathon Valley is perfect for exploration.  There are many named small settlements in the area.</p>
 		</article>
 	  </section> <!--ending for hike2 crater-->
