--- a/wavyFormations.html
+++ b/wavyFormations.html
@@ -28,7 +28,7 @@
 	  </div>
 		 
 	 <section id="mapInfo">
-		 <h2>Wavy Formation Hike Information</h2>
+		 <h2>Wavy Formations Hike Information</h2>
 		 
 		 <ul id="firstList">
 			 <li>Hike Rating: Moderate</li>
@@ -45,7 +45,7 @@
 		 </section>	
 		 
 		 <section id="copyText">
-			 <h2>Wavy Formation Hike</h2>
+			 <h2>Wavy Formations Hike</h2>
 			 <p>The Wavy Formations hike isn't long, but you need to properly prepare your gear.  There are fewer waystations or settlements around.  The geological formations are spectacular.  Start at the trailhead and weave your way through the maze.  Enjoy a rest in the flatlands before your ascent to the scenic overlook.  Then make your way to the campsites.</p>
 		 </section>
 
