--- a/northernHikes.html
+++ b/northernHikes.html
@@ -28,7 +28,7 @@
 			<p>Image Credit: NASA/JPL-Caltech/University of Arizona</p>  
 		  </div>
 		<article id="hikes1">  
-			<a href="wavyFormations.html"><h2>Wavy Formations Hikes</h2></a>
+			<a href="wavyFormations.html"><h2>Wavy Formations Hike</h2></a>
 			<p>Come hike in the northern region of Mars.  While there, you can get lost in the geology.  These formations will have you going through a maze of Martian sandstone deposits.</p>
 		</article>
 	  </section> <!--ending for hike1 canyon-->
@@ -40,7 +40,7 @@
 			<p>Image Credit: NASA/JPL-Caltech/MSSS/JHU-APL/Brown Univ.</p>  
 		  </div>
 		<article id="hikes2">  
-			<a href="unusualMound.html"><h2>Unusual Mound Hikes</h2></a>
+			<a href="unusualMound.html"><h2>Unusual Mound Hike</h2></a>
 			<p>Come take an easy hike up this unusual mound of dirt and experience the geology of the northern hemisphere.  This hike has a small waystation and some good views of the surrounding terrain.  This would be a good hike to take to get acclimated to the Martian atmosphere.</p>
 		</article>
 	  </section> <!--ending for hike2 crater-->
